Set app basename to /books for routing
Added 'homepage' field to package.json and set the Router basename to '/books' in App.js to ensure correct routing when deployed to a subdirectory.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "book-store",
   "version": "0.1.0",
+  "homepage": "/books",
   "private": true,
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
