--- a/package.json
+++ b/package.json
@@ -1,36 +1,29 @@
 {
-  "name": "book-store",
+  "name": "books-store",
   "version": "0.1.0",
-  "homepage": "/books",
   "private": true,
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/themes": "^3.2.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^3.0.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.4",
-    "flowbite": "^3.1.2",
-    "flowbite-react": "^0.10.2",
-    "lucide-react": "^0.483.0",
-    "react": "^19.0.0",
-    "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.4.0",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-countup": "^6.4.2",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "react-shadow": "^20.6.0",
-    "recharts": "^2.15.1",
-    "styled-components": "^6.1.16",
-    "swiper": "^11.2.6",
+    "recharts": "^2.8.0",
+    "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3050 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -54,8 +47,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.3.0"
   }
 }
